# TraceX

./: .gitignore  README.md  app-cli.py  app.py  config.py  main.py  models.txt  pyproject.toml  run.sh
config/: .env.example
data/input/: README.md
data/samples/: sample_hlrs.csv  sample_llrs.csv  sample_requirements.xlsx
docs/: ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  COMMANDS.md  COMMAND_REFERENCE.md  HIERARCHICAL_ARCHITECTURE.md  HIERARCHICAL_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  REORGANIZATION_SUMMARY.md  UPDATES_FEB4.md  WHATS_NEW.md
reqs/Samples-01-Sir/: High-Level-Requirements.csv  Low-Level-Requirements.csv  System-Level-Requirements.csv
reqs/Samples-02-Sidd/: High-Level-Requirements.csv  Low-Level-Requirements.csv  System-Level-Requirements.csv
scripts/: generate_samples.py
src/: __init__.py  candidate_generator.py  matrix_generator.py  model_provider.py  models.py  reasoning_engine.py  requirements_loader.py  traceability_system.py  understanding_layer.py
src/analyze/: analyzer.py  hierarchical_analyzer.py  reasoner.py  unified_analyzer.py
src/decompose/: __init__.py  decomposer.py  prompts.py
src/index/: indexer.py
src/ingest/: parser.py
src/link/: __init__.py  hierarchical_linker.py  linker.py
src/pipeline/: orchestrator.py
src/utils/: api_utils.py  file_io.py  graph_enhanced.py  id_utils.py  matrix_enhanced.py  output_generator.py  report_generator.py  text_utils.py  tree_visualizer.py  unified_output_generator.py  visualization.py
tests/: test_system.py
