[project]
name = "tracex"
version = "0.1.0"
description = "HLR-LLR Traceability System for Requirements Management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.53.1",
    "google-generativeai>=0.8.3",
    "anthropic>=0.39.0",
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "numpy>=2.2.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.3.1",
    "rank-bm25>=0.2.2",
    "pydantic>=2.10.5",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
]
